finish with portfolio section using flexbox

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       </div>
       <ul class="navbar__menu">
         <li class="navbar__item">
-          <a href="#">About</a>
+          <a href="#about-me">About</a>
         </li>
         <li class="navbar__item">
-          <a href="#">Work</a>
+          <a href="#portfolio">Work</a>
         </li>
         <li class="navbar__item">
           <a href="#">Contact</a>
@@ -49,7 +49,7 @@
           <span class="heading-primary--sub ">Front End Engineer</span>
         </h1>
         <a
-          href="#"
+          href="#portfolio"
           class="btn btn--white"
           data-aos="zoom-in"
           data-aos-delay="500"
@@ -69,7 +69,7 @@
               >
             </h2>
           </div>
-          <div class="about-me__content">
+          <div class="about-me__content" id="about-me">
             <div class="about-me__about-me card">
               <h3 class="heading-tertiary">About Me</h3>
               <p class="lead">
@@ -108,6 +108,211 @@
                   <i class="fab fa-node"></i>
                 </li>
               </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="portfolio" id="portfolio">
+        <div class="portfolio__header ">
+          <h2 class="heading-secondary ">Portfolio</h2>
+        </div>
+        <div class="portfolio__showcase container">
+          <div class="portfolio__item card">
+            <a href="#" class="showcase__link">
+              <img
+                src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                alt="showcase 1"
+                class="portfolio__img"
+              />
+            </a>
+            <h3 class="heading-tertiary">TicketDream</h3>
+            <p class="extra-small">
+              HTML | Sass | Vanilla JavaScript | Webpack | Babel
+            </p>
+            <p class="small">
+              TicketDream is an application project inspired by TicketMaster, a
+              ticket sales and distribution company that allows its customers to
+              search for and purchase tickets to concerts, sports, arts, theater
+              and other events.
+            </p>
+            <div class="portfolio__btn">
+              <a
+                href="https://ticketdream.netlify.com/"
+                class="btn btn--small btn--primary"
+                target="_blank"
+                >Live Demo</a
+              >
+              <a
+                href="https://github.com/Suonx002/TicketDream"
+                class="btn btn--small btn--dark"
+                target="_blank"
+                >Source Code</a
+              >
+            </div>
+          </div>
+          <div class="portfolio__item card">
+            <a href="#" class="showcase__link">
+              <img
+                src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                alt="showcase 1"
+                class="portfolio__img"
+              />
+            </a>
+            <h3 class="heading-tertiary">TicketDream</h3>
+            <p class="extra-small">
+              HTML | Sass | Vanilla JavaScript | Webpack | Babel
+            </p>
+            <p class="small">
+              TicketDream is an application project inspired by TicketMaster, a
+              ticket sales and distribution company that allows its customers to
+              search for and purchase tickets to concerts, sports, arts, theater
+              and other events.
+            </p>
+            <div class="portfolio__btn">
+              <a
+                href="https://ticketdream.netlify.com/"
+                class="btn btn--small btn--primary"
+                target="_blank"
+                >Live Demo</a
+              >
+              <a
+                href="https://github.com/Suonx002/TicketDream"
+                class="btn btn--small btn--dark"
+                target="_blank"
+                >Source Code</a
+              >
+            </div>
+          </div>
+          <div class="portfolio__item card">
+            <a href="#" class="showcase__link">
+              <img
+                src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                alt="showcase 1"
+                class="portfolio__img"
+              />
+            </a>
+            <h3 class="heading-tertiary">TicketDream</h3>
+            <p class="extra-small">
+              HTML | Sass | Vanilla JavaScript | Webpack | Babel
+            </p>
+            <p class="small">
+              TicketDream is an application project inspired by TicketMaster, a
+              ticket sales and distribution company that allows its customers to
+              search for and purchase tickets to concerts, sports, arts, theater
+              and other events.
+            </p>
+            <div class="portfolio__btn">
+              <a
+                href="https://ticketdream.netlify.com/"
+                class="btn btn--small btn--primary"
+                target="_blank"
+                >Live Demo</a
+              >
+              <a
+                href="https://github.com/Suonx002/TicketDream"
+                class="btn btn--small btn--dark"
+                target="_blank"
+                >Source Code</a
+              >
+            </div>
+          </div>
+          <div class="portfolio__item card">
+            <a href="#" class="showcase__link">
+              <img
+                src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                alt="showcase 1"
+                class="portfolio__img"
+              />
+            </a>
+            <h3 class="heading-tertiary">TicketDream</h3>
+            <p class="extra-small">
+              HTML | Sass | Vanilla JavaScript | Webpack | Babel
+            </p>
+            <p class="small">
+              TicketDream is an application project inspired by TicketMaster, a
+              ticket sales and distribution company that allows its customers to
+              search for and purchase tickets to concerts, sports, arts, theater
+              and other events.
+            </p>
+            <div class="portfolio__btn">
+              <a
+                href="https://ticketdream.netlify.com/"
+                class="btn btn--small btn--primary"
+                target="_blank"
+                >Live Demo</a
+              >
+              <a
+                href="https://github.com/Suonx002/TicketDream"
+                class="btn btn--small btn--dark"
+                target="_blank"
+                >Source Code</a
+              >
+            </div>
+          </div>
+          <div class="portfolio__item card">
+            <a href="#" class="showcase__link">
+              <img
+                src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                alt="showcase 1"
+                class="portfolio__img"
+              />
+            </a>
+            <h3 class="heading-tertiary">TicketDream</h3>
+            <p class="extra-small">
+              HTML | Sass | Vanilla JavaScript | Webpack | Babel
+            </p>
+            <p class="small">
+              TicketDream is an application project inspired by TicketMaster, a
+              ticket sales and distribution company that allows its customers to
+              search for and purchase tickets to concerts, sports, arts, theater
+              and other events.
+            </p>
+            <div class="portfolio__btn">
+              <a
+                href="https://ticketdream.netlify.com/"
+                class="btn btn--small btn--primary"
+                target="_blank"
+                >Live Demo</a
+              >
+              <a
+                href="https://github.com/Suonx002/TicketDream"
+                class="btn btn--small btn--dark"
+                target="_blank"
+                >Source Code</a
+              >
+            </div>
+          </div>
+          <div class="portfolio__item card">
+            <a href="#" class="showcase__link">
+              <img
+                src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                alt="showcase 1"
+                class="portfolio__img"
+              />
+            </a>
+            <h3 class="heading-tertiary">TicketDream</h3>
+            <p class="extra-small">
+              HTML | Sass | Vanilla JavaScript | Webpack | Babel
+            </p>
+            <p class="small">
+              TicketDream is an application project inspired by TicketMaster, a
+              ticket sales and distribution company that allows its customers to
+              search for and purchase tickets to concerts, sports, arts, theater
+              and other events.
+            </p>
+            <div class="portfolio__btn">
+              <a
+                href="https://ticketdream.netlify.com/"
+                class="btn btn--small btn--primary"
+                target="_blank"
+                >Live Demo</a
+              >
+              <a
+                href="https://github.com/Suonx002/TicketDream"
+                class="btn btn--small btn--dark"
+                target="_blank"
+                >Source Code</a
+              >
             </div>
           </div>
         </div>
