complete contact section

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
     <title>Vuthy Suon | Front End Engineer</title>
   </head>
-  <body>
+  <body id="home">
     <nav class="navbar">
       <div class="navbar__logo">
-        <a href="#">
+        <a href="#home">
           <img src="./img/logo.png" alt="logo image" class="logo" />
         </a>
       </div>
@@ -30,10 +30,10 @@
           <a href="#portfolio">Work</a>
         </li>
         <li class="navbar__item">
-          <a href="#">Contact</a>
+          <a href="#contact">Contact</a>
         </li>
-        <li class="navbar__item ">
-          <a href="#">Resume</a>
+        <li class="navbar__item navbar__item--resume">
+          <a href="./resume/vuthysuon_resume.pdf" target="_blank">Resume</a>
         </li>
       </ul>
     </nav>
@@ -113,208 +113,245 @@
         </div>
       </section>
       <section class="portfolio" id="portfolio">
-        <div class="portfolio__header ">
-          <h2 class="heading-secondary ">Portfolio</h2>
+        <div class="container">
+          <div class="portfolio__header ">
+            <h2 class="heading-secondary ">Portfolio</h2>
+          </div>
+          <div class="portfolio__showcase container">
+            <div class="portfolio__item card">
+              <a href="#" class="showcase__link">
+                <img
+                  src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                  alt="showcase 1"
+                  class="portfolio__img"
+                />
+              </a>
+              <h3 class="heading-tertiary">TicketDream</h3>
+              <p class="extra-small">
+                HTML | Sass | Vanilla JavaScript | Webpack | Babel
+              </p>
+              <p class="small">
+                TicketDream is an application project inspired by TicketMaster,
+                a ticket sales and distribution company that allows its
+                customers to search for and purchase tickets to concerts,
+                sports, arts, theater and other events.
+              </p>
+              <div class="portfolio__btn">
+                <a
+                  href="https://ticketdream.netlify.com/"
+                  class="btn btn--small btn--primary"
+                  target="_blank"
+                  >Live Demo</a
+                >
+                <a
+                  href="https://github.com/Suonx002/TicketDream"
+                  class="btn btn--small btn--dark"
+                  target="_blank"
+                  >Source Code</a
+                >
+              </div>
+            </div>
+            <div class="portfolio__item card">
+              <a href="#" class="showcase__link">
+                <img
+                  src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                  alt="showcase 1"
+                  class="portfolio__img"
+                />
+              </a>
+              <h3 class="heading-tertiary">TicketDream</h3>
+              <p class="extra-small">
+                HTML | Sass | Vanilla JavaScript | Webpack | Babel
+              </p>
+              <p class="small">
+                TicketDream is an application project inspired by TicketMaster,
+                a ticket sales and distribution company that allows its
+                customers to search for and purchase tickets to concerts,
+                sports, arts, theater and other events.
+              </p>
+              <div class="portfolio__btn">
+                <a
+                  href="https://ticketdream.netlify.com/"
+                  class="btn btn--small btn--primary"
+                  target="_blank"
+                  >Live Demo</a
+                >
+                <a
+                  href="https://github.com/Suonx002/TicketDream"
+                  class="btn btn--small btn--dark"
+                  target="_blank"
+                  >Source Code</a
+                >
+              </div>
+            </div>
+            <div class="portfolio__item card">
+              <a href="#" class="showcase__link">
+                <img
+                  src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                  alt="showcase 1"
+                  class="portfolio__img"
+                />
+              </a>
+              <h3 class="heading-tertiary">TicketDream</h3>
+              <p class="extra-small">
+                HTML | Sass | Vanilla JavaScript | Webpack | Babel
+              </p>
+              <p class="small">
+                TicketDream is an application project inspired by TicketMaster,
+                a ticket sales and distribution company that allows its
+                customers to search for and purchase tickets to concerts,
+                sports, arts, theater and other events.
+              </p>
+              <div class="portfolio__btn">
+                <a
+                  href="https://ticketdream.netlify.com/"
+                  class="btn btn--small btn--primary"
+                  target="_blank"
+                  >Live Demo</a
+                >
+                <a
+                  href="https://github.com/Suonx002/TicketDream"
+                  class="btn btn--small btn--dark"
+                  target="_blank"
+                  >Source Code</a
+                >
+              </div>
+            </div>
+            <div class="portfolio__item card">
+              <a href="#" class="showcase__link">
+                <img
+                  src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                  alt="showcase 1"
+                  class="portfolio__img"
+                />
+              </a>
+              <h3 class="heading-tertiary">TicketDream</h3>
+              <p class="extra-small">
+                HTML | Sass | Vanilla JavaScript | Webpack | Babel
+              </p>
+              <p class="small">
+                TicketDream is an application project inspired by TicketMaster,
+                a ticket sales and distribution company that allows its
+                customers to search for and purchase tickets to concerts,
+                sports, arts, theater and other events.
+              </p>
+              <div class="portfolio__btn">
+                <a
+                  href="https://ticketdream.netlify.com/"
+                  class="btn btn--small btn--primary"
+                  target="_blank"
+                  >Live Demo</a
+                >
+                <a
+                  href="https://github.com/Suonx002/TicketDream"
+                  class="btn btn--small btn--dark"
+                  target="_blank"
+                  >Source Code</a
+                >
+              </div>
+            </div>
+            <div class="portfolio__item card">
+              <a href="#" class="showcase__link">
+                <img
+                  src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                  alt="showcase 1"
+                  class="portfolio__img"
+                />
+              </a>
+              <h3 class="heading-tertiary">TicketDream</h3>
+              <p class="extra-small">
+                HTML | Sass | Vanilla JavaScript | Webpack | Babel
+              </p>
+              <p class="small">
+                TicketDream is an application project inspired by TicketMaster,
+                a ticket sales and distribution company that allows its
+                customers to search for and purchase tickets to concerts,
+                sports, arts, theater and other events.
+              </p>
+              <div class="portfolio__btn">
+                <a
+                  href="https://ticketdream.netlify.com/"
+                  class="btn btn--small btn--primary"
+                  target="_blank"
+                  >Live Demo</a
+                >
+                <a
+                  href="https://github.com/Suonx002/TicketDream"
+                  class="btn btn--small btn--dark"
+                  target="_blank"
+                  >Source Code</a
+                >
+              </div>
+            </div>
+            <div class="portfolio__item card">
+              <a href="#" class="showcase__link">
+                <img
+                  src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+                  alt="showcase 1"
+                  class="portfolio__img"
+                />
+              </a>
+              <h3 class="heading-tertiary">TicketDream</h3>
+              <p class="extra-small">
+                HTML | Sass | Vanilla JavaScript | Webpack | Babel
+              </p>
+              <p class="small">
+                TicketDream is an application project inspired by TicketMaster,
+                a ticket sales and distribution company that allows its
+                customers to search for and purchase tickets to concerts,
+                sports, arts, theater and other events.
+              </p>
+              <div class="portfolio__btn">
+                <a
+                  href="https://ticketdream.netlify.com/"
+                  class="btn btn--small btn--primary"
+                  target="_blank"
+                  >Live Demo</a
+                >
+                <a
+                  href="https://github.com/Suonx002/TicketDream"
+                  class="btn btn--small btn--dark"
+                  target="_blank"
+                  >Source Code</a
+                >
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="portfolio__showcase container">
-          <div class="portfolio__item card">
-            <a href="#" class="showcase__link">
-              <img
-                src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                alt="showcase 1"
-                class="portfolio__img"
-              />
-            </a>
-            <h3 class="heading-tertiary">TicketDream</h3>
-            <p class="extra-small">
-              HTML | Sass | Vanilla JavaScript | Webpack | Babel
-            </p>
-            <p class="small">
-              TicketDream is an application project inspired by TicketMaster, a
-              ticket sales and distribution company that allows its customers to
-              search for and purchase tickets to concerts, sports, arts, theater
-              and other events.
-            </p>
-            <div class="portfolio__btn">
-              <a
-                href="https://ticketdream.netlify.com/"
-                class="btn btn--small btn--primary"
-                target="_blank"
-                >Live Demo</a
-              >
-              <a
-                href="https://github.com/Suonx002/TicketDream"
-                class="btn btn--small btn--dark"
-                target="_blank"
-                >Source Code</a
-              >
-            </div>
+      </section>
+      <section class="contact" id="contact">
+        <div class="container card">
+          <div class="contact__header">
+            <h2 class="heading-secondary ">Contact</h2>
           </div>
-          <div class="portfolio__item card">
-            <a href="#" class="showcase__link">
-              <img
-                src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                alt="showcase 1"
-                class="portfolio__img"
-              />
-            </a>
-            <h3 class="heading-tertiary">TicketDream</h3>
-            <p class="extra-small">
-              HTML | Sass | Vanilla JavaScript | Webpack | Babel
-            </p>
-            <p class="small">
-              TicketDream is an application project inspired by TicketMaster, a
-              ticket sales and distribution company that allows its customers to
-              search for and purchase tickets to concerts, sports, arts, theater
-              and other events.
-            </p>
-            <div class="portfolio__btn">
-              <a
-                href="https://ticketdream.netlify.com/"
-                class="btn btn--small btn--primary"
-                target="_blank"
-                >Live Demo</a
-              >
-              <a
-                href="https://github.com/Suonx002/TicketDream"
-                class="btn btn--small btn--dark"
-                target="_blank"
-                >Source Code</a
-              >
-            </div>
-          </div>
-          <div class="portfolio__item card">
-            <a href="#" class="showcase__link">
-              <img
-                src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                alt="showcase 1"
-                class="portfolio__img"
-              />
-            </a>
-            <h3 class="heading-tertiary">TicketDream</h3>
-            <p class="extra-small">
-              HTML | Sass | Vanilla JavaScript | Webpack | Babel
-            </p>
-            <p class="small">
-              TicketDream is an application project inspired by TicketMaster, a
-              ticket sales and distribution company that allows its customers to
-              search for and purchase tickets to concerts, sports, arts, theater
-              and other events.
-            </p>
-            <div class="portfolio__btn">
-              <a
-                href="https://ticketdream.netlify.com/"
-                class="btn btn--small btn--primary"
-                target="_blank"
-                >Live Demo</a
-              >
-              <a
-                href="https://github.com/Suonx002/TicketDream"
-                class="btn btn--small btn--dark"
-                target="_blank"
-                >Source Code</a
-              >
-            </div>
-          </div>
-          <div class="portfolio__item card">
-            <a href="#" class="showcase__link">
-              <img
-                src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                alt="showcase 1"
-                class="portfolio__img"
-              />
-            </a>
-            <h3 class="heading-tertiary">TicketDream</h3>
-            <p class="extra-small">
-              HTML | Sass | Vanilla JavaScript | Webpack | Babel
-            </p>
-            <p class="small">
-              TicketDream is an application project inspired by TicketMaster, a
-              ticket sales and distribution company that allows its customers to
-              search for and purchase tickets to concerts, sports, arts, theater
-              and other events.
-            </p>
-            <div class="portfolio__btn">
-              <a
-                href="https://ticketdream.netlify.com/"
-                class="btn btn--small btn--primary"
-                target="_blank"
-                >Live Demo</a
-              >
-              <a
-                href="https://github.com/Suonx002/TicketDream"
-                class="btn btn--small btn--dark"
-                target="_blank"
-                >Source Code</a
-              >
-            </div>
-          </div>
-          <div class="portfolio__item card">
-            <a href="#" class="showcase__link">
-              <img
-                src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                alt="showcase 1"
-                class="portfolio__img"
-              />
-            </a>
-            <h3 class="heading-tertiary">TicketDream</h3>
-            <p class="extra-small">
-              HTML | Sass | Vanilla JavaScript | Webpack | Babel
-            </p>
-            <p class="small">
-              TicketDream is an application project inspired by TicketMaster, a
-              ticket sales and distribution company that allows its customers to
-              search for and purchase tickets to concerts, sports, arts, theater
-              and other events.
-            </p>
-            <div class="portfolio__btn">
-              <a
-                href="https://ticketdream.netlify.com/"
-                class="btn btn--small btn--primary"
-                target="_blank"
-                >Live Demo</a
-              >
-              <a
-                href="https://github.com/Suonx002/TicketDream"
-                class="btn btn--small btn--dark"
-                target="_blank"
-                >Source Code</a
-              >
-            </div>
-          </div>
-          <div class="portfolio__item card">
-            <a href="#" class="showcase__link">
-              <img
-                src="https://images.pexels.com/photos/1591447/pexels-photo-1591447.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-                alt="showcase 1"
-                class="portfolio__img"
-              />
-            </a>
-            <h3 class="heading-tertiary">TicketDream</h3>
-            <p class="extra-small">
-              HTML | Sass | Vanilla JavaScript | Webpack | Babel
-            </p>
-            <p class="small">
-              TicketDream is an application project inspired by TicketMaster, a
-              ticket sales and distribution company that allows its customers to
-              search for and purchase tickets to concerts, sports, arts, theater
-              and other events.
-            </p>
-            <div class="portfolio__btn">
-              <a
-                href="https://ticketdream.netlify.com/"
-                class="btn btn--small btn--primary"
-                target="_blank"
-                >Live Demo</a
-              >
-              <a
-                href="https://github.com/Suonx002/TicketDream"
-                class="btn btn--small btn--dark"
-                target="_blank"
-                >Source Code</a
-              >
-            </div>
-          </div>
+          <p class="contact__phone">
+            <i class="fas fa-mobile"></i> <span>(952) 686-1657</span>
+          </p>
+          <p class="contact__email">
+            <i class="fas fa-envelope"></i> <span>Suonx002@gmail.com</span>
+          </p>
+          <ul class="contact__links">
+            <li class="contact__item">
+              <a href="https://github.com/Suonx002" target="_blank"
+                ><i class="fab fa-github"></i
+              ></a>
+            </li>
+            <li class="contact__item">
+              <a href="https://www.linkedin.com/in/suonx002/" target="_blank"
+                ><i class="fab fa-linkedin"></i
+              ></a>
+            </li>
+            <li class="contact__item">
+              <a href="https://www.facebook.com/hisnowshoes" target="_blank"
+                ><i class="fab fa-facebook"></i
+              ></a>
+            </li>
+            <li class="contact__item">
+              <a href="https://www.instagram.com/hisnowshoes/" target="_blank"
+                ><i class="fab fa-instagram"></i
+              ></a>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
