finish with footer sections

--- a/index.html
+++ b/index.html
@@ -355,6 +355,15 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="container">
+        <p class="copyright">Created by Vuthy Suon</p>
+        <a href="#home">
+          <img src="./img/logo.png" alt="logo image" class="footer__logo" />
+        </a>
+        <p>2020 All Rights Reserved</p>
+      </div>
+    </footer>
   </body>
   <script
     src="https://kit.fontawesome.com/4aab0af21c.js"
